# flat_info

./: .pre-commit-config.yaml  README.md  gather_flat_info.py  pyproject.toml
